# flute

./: README.md  docker-compose.yml  inspect-job  inspect-logs  inspect-stack  preview-video  start-stack
api/: Dockerfile  entrypoint.sh  pyproject.toml
api/src/: api.py  models.py
minio/: init.sh
mpi/: Dockerfile
mpi/project/: Makefile  apply_lut.cpp  apply_lut.h  download_media.cpp  download_media.h  init.sh  process_video.cpp  rabbitmq_consumer.c  start-process.sh
