[tool.poetry]
name = "src"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.3"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = "^1.9.0"
pika = "^1.2.0"
boto3 = "^1.20.0"
python-multipart="^0.0.6"
aio-pika = "^9.0.5"
asyncssh = "^2.13.0"

[tool.poetry.group.dev.dependencies]
black  = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
